<resources>
    <string name="app_name">apiKotlin</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="signUp">Регистрация</string>
    <string name="signIn">Войти</string>
    <string name="name">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="repeatPwd">Повторите пароль</string>
    <string name="newSignUp">Зарегистрироваться</string>
    <string name="haveAcc">У меня уже есть аккаунт</string>
</resources>